<resources>
    <string name="app_name">NPHIIS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Cases List</string>
    <string name="title_notifications">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_client">Add Case</string>
    <string name="search_patient_by">Filter Cases By:</string>
    <string name="filter">Filter</string>
    <string name="filter_county">County</string>
    <string name="filter_sub_county">Sub County</string>
    <string name="reset_filters">Reset Filters</string>
    <string name="no_filter_options_available">No filter options available.</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="given_name">Given Name</string>
    <string name="family_name">Family Name</string>
    <string name="new_case_description">New Case</string>
    <string name="message_no_datetime">N/A</string>
    <string name="moh502">Immediate Notifiable Diseases Reporting Tool</string>
    <string name="contact_tracing">Contact Tracing Forms</string>
    <string name="moh505">IDSR Weekly Epidemic Monitoring Tool</string>
    <string name="social_form">Social Investigation Form</string>
    <string name="rumor_tracking">Social Listening and Rumor Tracking Tool</string>
    <string name="hello">Hello,</string>
    <string name="john_mdoe">John Mdoe</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="last_sync_timestamp">Last sync time: %1$s</string>
    <string name="current_status">Current sync status: %1$s</string>
    <string name="cancel_questionnaire_message">Are you sure you want to cancel?</string>
    <string name="lab_results_not_captured">Lab results not captured</string>
    <string name="patient_name">Patient Name</string>
    <string name="epid">Search for case</string>
    <string name="please_select_an_option_below_to_proceed">Please select an option below to proceed.</string>
    <string name="case_selection">Case Selection!</string>
    <string name="select_reported_disease">Select reported disease</string>
    <string name="select_case_type">Select Case Type</string>
    <string name="measles">Measles</string>
    <string name="afp">AFP</string>
    <string name="vl_forms">Visceral Leishmaniasis (Kala-azar) Case Management Form</string>
    <string name="monthly">IDSR Monthly Reporting Tool</string>
    <string name="no_stool_specimen_results_available">No Stool specimen results available</string>
    <string name="add_form">Add Form</string>
    <string name="no_final_laboratory_results_available">No Final Laboratory Results available</string>
    <string name="no_contact_information_available">No Contact Information available</string>
    <string name="no_treatment_information_available">No Treatment information available</string>
    <string name="no_follow_up_information_available">No Follow Up information available</string>
    <string name="national_public_health_nintelligence_ninformation_nsystem_nphiis">National Public Health\nIntelligence\nInformation\nSystem (NPHIIS)</string>
    <string name="notifiable">Notifiable Diseases</string>
    <string name="mass">Mass Immunization</string>
    <string name="case_management">Case Management</string>
    <string name="social">RCCE Tools</string>
    <string name="surveys">Assessments/Surveys</string>
    <string name="home_header_prompt">Choose a reporting workflow to continue.</string>
    <string name="home_section_title">Reporting Workflows</string>
    <string name="home_subtitle_notifiable">Capture immediate, weekly and monthly alerts.</string>
    <string name="home_subtitle_mass">Track vaccination and campaign activities.</string>
    <string name="home_subtitle_case_management">Manage follow-up and case outcomes.</string>
    <string name="home_subtitle_social">Record rumors and social investigation data.</string>
    <string name="home_subtitle_surveys">Run assessments and supervision checklists.</string>
    <string name="home_subtitle_adam">Investigate priority outbreak cases and lab results.</string>
    <string name="flow_header_prompt">Select a form to proceed.</string>
    <string name="flow_section_title">Available Forms</string>
    <string name="case_flow_section_title">Case Actions</string>
    <string name="monthly_reported">Monthly Reportable Diseases</string>
    <string name="weekly_reported">Weekly Reportable Diseases</string>
    <string name="immediate_reportable">Immediate Reportable Diseases</string>
    <string name="polio">Polio Immunization (OPV)</string>
    <string name="measles_imm">Measles Immunization</string>
    <string name="cholera">Cholera Immunization</string>
    <string name="social_inv">Social Investigation Form</string>
    <string name="social_inv_parent">RCCE Tools</string>
    <string name="rumor_tool">Rumor Tracking Tool</string>
    <string name="vl_form">Visceral Leishmaniasis Case Management Form</string>
    <string name="adam">ADaM</string>
    <string name="vhf_form">Viral Hemorrhagic Fever (VHF) Case Investigation Tool</string>
    <string name="no_itd_laboratory_results_available">No ITD Lab Information available</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="last_sync_status">Last sync status: %1$s</string>
    <string name="last_sync_status_na">Last sync status: Not available</string>
    <string name="moh505_form">MOH 505</string>
    <string name="county_sub_county">County/Sub County Coordination Assessment</string>
    <string name="community_tool">Community Questionnaire</string>
    <string name="selection_sheet_badge">Form Picker</string>
    <string name="selection_sheet_title">Choose a workflow</string>
    <string name="selection_sheet_subtitle">Pick the form you want to open next.</string>
    <string name="selection_sheet_open_option">Open form</string>
    <string name="selection_sheet_subtitle_county_assessment">Capture county and sub-county coordination findings and follow-up actions.</string>
    <string name="selection_sheet_subtitle_community_questionnaire">Record community feedback, observations and response actions.</string>
    <string name="selection_sheet_subtitle_tally_sheet">Summarize team activity, coverage and field progress for the day.</string>
    <string name="selection_sheet_subtitle_supervisor_checklist">Document supervision observations, accountability checks and support needs.</string>
    <string name="selection_sheet_subtitle_generic">Open this form to continue with data entry.</string>
    <string name="social_form_badge_community">Community</string>
    <string name="social_form_badge_county">County Level</string>
    <string name="social_form_label_occupation">Occupation</string>
    <string name="social_form_label_village">Village</string>
    <string name="social_form_label_sex">Sex</string>
    <string name="social_form_label_age">Age</string>
    <string name="social_form_label_ward">Ward</string>
    <string name="social_form_label_reporting_site">Reporting Site</string>
    <string name="social_form_label_facility_type">Facility Type</string>
    <string name="social_form_label_sub_county">Sub County</string>
    <string name="social_form_chip_county">County: %1$s</string>
    <string name="social_form_chip_sub_county">Sub County: %1$s</string>
    <string name="social_form_title_community_default">Community Questionnaire</string>
    <string name="social_form_title_county_default">County/Subcounty Interface</string>
    <string name="social_form_not_captured">Not captured</string>
    <string name="mpox">Mpox Immunization</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="clear_app_data">Clear App Data</string>
    <string name="account">Account</string>
    <string name="logout">Logout</string>
    <string name="_254_712_345_678">+254 712 345 678</string>
    <string name="jane_doe_example_com">jane.doe@example.com</string>
    <string name="jane_doe">Jane Doe</string>
    <string name="profile_header_caption">Account overview</string>
    <string name="cancel">Cancel</string>
    <string name="personal_information">Personal Information</string>
    <string name="data_management">Data Management</string>
    <string name="sync_data">Sync Data</string>
    <string name="reset_resource_sync_title">Reset Resource Sync</string>
    <string name="reset_resource_sync_description">Reset the stored last sync timestamps in the background. The next sync will download the supported resources again.</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="this_feature_is_currently_under_development_and_will_be_available_in_a_future_update">This feature is currently under development and will be available in a future update.</string>
    <string name="okay">Okay</string>
</resources>